src/objects/CTCT2__History__c.object
<CustomObject>
    <fields>
        <fullName>CTCT2__Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTCT2__Contact_Opt_Ins_From_CTCT__c</fullName>
        <label>Contact Opt Ins From Constant Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__Contact_Opt_Outs_From_CTCT__c</fullName>
        <label>Contact Opt Outs From Constant Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__Contact_Opt_Outs_To_CTCT__c</fullName>
        <label>Contact Opt Outs To Constant Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__Finish__c</fullName>
        <label>Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CTCT2__Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Lead_Opt_Ins_From_CTCT__c</fullName>
        <label>Lead Opt Ins From Constant Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__Lead_Opt_Outs_From_CTCT__c</fullName>
        <label>Lead Opt Outs From Constant Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__Lead_Opt_Outs_To_CTCT__c</fullName>
        <label>Lead Opt Outs To Constant Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__Opt_Ins_from_CTCT__c</fullName>
        <formula>CTCT2__Contact_Opt_Ins_From_CTCT__c  +  CTCT2__Lead_Opt_Ins_From_CTCT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opt Ins From Constant Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__Opt_Outs_From_CTCT__c</fullName>
        <formula>CTCT2__Contact_Opt_Outs_From_CTCT__c  +  CTCT2__Lead_Opt_Outs_From_CTCT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opt Outs From Constant Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__Opt_Outs_To_CTCT__c</fullName>
        <formula>CTCT2__Contact_Opt_Outs_To_CTCT__c  +  CTCT2__Lead_Opt_Outs_To_CTCT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opt Outs To Constant Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settings</label>
        <referenceTo>CTCT2__Settings__c</referenceTo>
        <relationshipLabel>Constant Contact History</relationshipLabel>
        <relationshipName>Sync_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCT2__Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CTCT2__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Constant Contact History</label>
    <listViews>
        <fullName>CTCT2__All_Histories</fullName>
        <columns>NAME</columns>
        <columns>CTCT2__Start__c</columns>
        <columns>CTCT2__Finish__c</columns>
        <columns>CTCT2__Status__c</columns>
        <columns>CTCT2__Frequency__c</columns>
        <columns>CTCT2__Contact_Opt_Outs_From_CTCT__c</columns>
        <columns>CTCT2__Contact_Opt_Ins_From_CTCT__c</columns>
        <columns>CTCT2__Contact_Opt_Outs_To_CTCT__c</columns>
        <columns>CTCT2__Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Histories</label>
    </listViews>
    <nameField>
        <displayFormat>Hist-{00}</displayFormat>
        <label>History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Constant Contact History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>